<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="decode_elements_array">
        <item>
            <![CDATA[
            <b>I. Tricolor flag:\n</b><br />
            - The first digit is the color of the upper band.\n<br />
            <b>II. Background color and monochrome figure\n</b><br />
            - The first digit represents the background color.\n<br />
            <b>III. Two-colored figure:\n</b><br />
            - The first digit is the color of the center pieces.\n<br />
            <b>IV. Character and Clothing:\n</b><br />
            - The first digit is the character.
            ]]></item>
        <item>
            <![CDATA[
            <b>I. Two-colored figure:</b>\n<br />
            - The first digit is the color of a shape The second digit is the shape of the figure.\n<br />
            <b>II. Glasses:\n</b><br />
            - The first digit is the color of glasses The second digit indicates the shape of glasses.
            ]]></item>
        <item>
            <![CDATA[
            <b>I. Tricolor flag:</b>\n<br />
            - The first digit is the color of the upper band;\n<br />
            - The second digit - the color of the middle band;\n<br />
            - The third digit - the color of the lower band.\n<br />
            <b>II. Background color and monochrome figure:\n</b><br />
            - The first digit represents the background color;\n<br />
            - The second digit is the color of a shape;\n<br />
            - The third digit is the shape of the figure.\n<br />
            <b>III. Two-colored figure:\n</b><br />
            - The first digit is the color of the center pieces;\n<br />
            - The second digit number is the color fringe figures;\n<br />
            - Third digit is the shape of the figure.\n<br />
            <b>IV. Character and Clothing:\n</b><br />
            - The first digit is the character;\n<br />
            - The second digit is the color of the clothes;\n<br />
            - The third digit indicates the kind of clothes.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit indicates the color of the background;<br />
            - The second digit is the character;<br />
            - The third digit indicates the color of clothing;<br />
            - The fourth digit indicates the kind of clothes.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit is the character;<br />
            - The second digit is the color of the clothes;<br />
            - The third digit indicates the kind of clothing;<br />
            - The fourth digit indicates the color of the pattern;<br />
            - The fifth digit is the type of pattern.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit indicates the color of the background;<br />
            - The second digit is the character;<br />
            - The third digit - is the color of clothing;<br />
            - The fourth digit indicates the kind of clothing;<br />
            - The fifth digit indicates the color of the pattern;<br />
            - The sixth digit is the type of pattern.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit is the character;<br />
            - The second digit is the color of clothing with a pattern;<br />
            - The third digit indicates the kind of clothing with a pattern;<br />
            - The fourth digit indicates the color of the pattern;<br />
            - The fifth digit is the type of pattern;<br />
            - The sixth digit is the color of clothes without a pattern or color of the glasses;<br />
            - The seventh digit is the type of character clothing or shape of the glasses.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit is the background color;<br />
            - The second digit is a character;<br />
            - The third digit is the color of clothing with a pattern;<br />
            - The fourth digit is the type of clothing with a pattern;<br />
            - The fifth digit is the color of the pattern;<br />
            - The sixth digit refers to the type of pattern;<br />
            - The seventh digit is the color of the clothes without a pattern or color of the glasses;<br />
            - The eighth digit is the type of clothing the character or form of glasses.
            ]]></item>
        <item>
            <![CDATA[
            - The first digit - the color of the background figures;<br />
            - The second digit - the form of the background figures;<br />
            - The third digit is the character;<br />
            - The fourth digit indicates the color of clothing with a pattern;<br />
            - The fifth digit is the kind of clothing with a pattern;<br />
            - The sixth digit indicates the color of the pattern;<br />
            - The seventh digit refers to the type of pattern;<br />
            - The eighth digit is the color of the clothes without a pattern or color of the glasses;<br />
            - The ninth digit is the type of clothing the character or form of glasses.
            ]]></item>
        <item>
            <![CDATA[
            - The first three digits describe the background (see the help section on the three elements);<br />
            - The fourth digit indicates the character;<br />
            - The fifth digit is the color of clothing with a pattern;<br />
            - The sixth digit is the kind of clothing with a pattern;<br />
            - The seventh digit indicates the color of the pattern;<br />
            - The eighth digit is the kind of pattern;<br />
            - The ninth digit is the color of the clothes without a pattern or color of the glasses;<br />
            - The tenth digit is the kind of clothes without a pattern or shape of the glasses.
            ]]></item>
        <item>
            <![CDATA[
            - Please enter the answer to the first image, then on the second, and so on.
            ]]></item>
    </string-array>

    <string name="app_name" >logophone</string>
    <string name="action_settings" >Settings</string>
    <string name="action_info">Information</string>
    <string name="spravka">Information</string>
    <string name="table">Table</string>
    <string name="newbie">Introduction</string>
    <string name="training">Training</string>
    <string name="test">Test</string>
    <string name="construct">Create my Logo</string>
    <string name="exit">Exit</string>
    <string name="imgB1">ib1</string>
    <string name="imgB2">ib2</string>
    <string name="imgB3">ib3</string>
    <string name="img1">i1</string>
    <string name="img2">i2</string>
    <string name="img3">i3</string>
    <string name="img4">i4</string>
    <string name="img5">i5</string>
    <string name="img6">i6</string>
    <string name="img7">i7</string>
    <string name="img8">i8</string>
    <string name="img9">i9</string>
    <string name="phone">Get phone number</string>
    <string name="gen">Generate</string>
    <string name="create_img">Create image</string>
    <string name="create_phone">Create by number</string>
    <string name="back">Back</string>
    <string name="HelloCreator">Get one of your contacts number or type it below and you will see true face of it =)</string>
</resources>
