<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageBack1"
            android:layout_weight="1"
            android:contentDescription="@string/imgB1"
            android:background="#ff8d00" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageBack2"
            android:layout_weight="1"
            android:contentDescription="@string/imgB2"
            android:background="#00b5ff" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageBack3"
            android:layout_weight="1"
            android:contentDescription="@string/imgB3"
            android:background="#a6ff00" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image1"
        android:contentDescription="@string/img1" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image2"
        android:contentDescription="@string/img2" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image3"
        android:contentDescription="@string/img3" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image4"
        android:contentDescription="@string/img4" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image5"
        android:contentDescription="@string/img5" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image6"
        android:contentDescription="@string/img6" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image7"
        android:contentDescription="@string/img7" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image8"
        android:contentDescription="@string/img8" android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image9"
        android:contentDescription="@string/img9" android:scaleType="fitXY"/>

</RelativeLayout>