<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#040404">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logomain"
        android:scaleType="fitEnd"
        android:cropToPadding="false"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/logo0"
        android:adjustViewBounds="true"
        android:scaleType="matrix"
        android:layout_below="@+id/imageView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/construct"
            android:id="@+id/btnConstruct"
            android:layout_below="@+id/btnTest"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spravka"
            android:id="@+id/btnInfo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:id="@+id/btnTraining"
            android:layout_below="@+id/btnLearn"
            android:paddingLeft="35dp"
            android:textSize="20dp"
            android:paddingRight="35dp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:id="@+id/btnTable"
            android:layout_below="@+id/btnInfo"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game Modes"
            android:id="@+id/btnTypeChooser"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newbie"
            android:id="@+id/btnLearn"
            android:layout_below="@+id/btnTable"
            android:paddingLeft="35dp"
            android:textSize="20dp"
            android:paddingRight="35dp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:id="@+id/btnTest"
            android:layout_below="@+id/btnTraining"
            android:paddingLeft="35dp"
            android:textSize="20dp"
            android:paddingRight="35dp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gallery"
            android:id="@+id/btnGallery"
            android:layout_alignParentLeft="true"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/btnExit"
            android:layout_below="@+id/btnConstruct"
            android:layout_alignParentLeft="true"
            android:textSize="25sp"
            android:background="@android:drawable/btn_default"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp" />
    </LinearLayout>

</RelativeLayout>
